# flight-scrapper

./: .gitignore  pyproject.toml
flight_scrapper/: scrapy.cfg
flight_scrapper/flight_scrapper/: items.py  middlewares.py  pipelines.py  settings.py
flight_scrapper/flight_scrapper/spiders/: aerolineas_arg.py  despegar.py  flybondi.py  urls.py  urls_bsas.py
